<resources>
    <string name="app_name">Toyopoly</string>
    <string name="lego">Lego</string>
    <string name="see_more">Se mer</string>
    <string name="cars">Toy-car</string>
    <string name="dolls">Doll</string>
    <string name="searchLabel">Søk</string>
    <string name="createAds">Create ads</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="toyCategory">
        <item>Cars</item>
        <item>Cards</item>
        <item>Doll</item>
        <item>Electric</item>
        <item>Kitchen and Food</item>
        <item>Learning</item>
        <item>Lego</item>
        <item>Other</item>
        <item>Play-set</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="register">Sign up</string>
    <string name="register_new_account">Register new account</string>
    <string name="login">Login</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_out">Sign out</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_ad">Create Ad</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="write_a_message">Write a message</string>
    <string name="sendimage">sendImage</string>
    <string name="messages">Messages</string>
    <string name="new_ad">New ad</string>
    <string name="home">Home</string>
    <string name="profilepicture">profilePicture</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_message">send message</string>
    <string name="all_toys">All toys</string>
    <string name="web_client_id">108228096973-aj8ki5ukd13hefadigjl53co5vpf3d59.apps.googleusercontent.com</string>
    <string name="loginGoogle">login Google</string>
    <string name="Move_to">Gå til</string>
    <string name="Delete">Slett</string>
    <string name="dialogTitle">"Velg "</string>
    <string name="dialogMessage">Gå til eller slett</string>
    <string name="dialogTitleToken">"Velg "</string>
    <string name="dialogMessageToken">Kjøp en token eller gå tilbake</string>
    <string name="dialogMessageBuy">Are you sure you want to buy the item</string>
    <string name="my_page">My Page</string>
    <string name="test">test</string>
    <string name="token">Token</string>
    <string name="image_of_ad">image of ad</string>
    <string name="goToMyPage">Go to my page</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="change_picture">change picture</string>
    <string name="cancel">Cancel</string>
    <string name="contact_seller">Contact seller</string>
    <string name="se_alle">Se alle</string>
    <string name="time">10:00</string>
    <string name="date">June 10</string>
    <string name="clicktobuy">Klikk for å kjøpe</string>
    <string name="buy">Buy</string>
    <string name="Sold">Sold</string>
    <string name="noInternet">Connect to the internet to login</string>
    <string name="buy_tokens">Buy Tokens</string>
    <string name="se_adresse_i_kart">Se adresse i kart</string>

</resources>