<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/allToysFragment"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/all_toys" />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/messages" />
    <item
        android:id="@+id/messageActivity"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="messages (Sendbird)" />
    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="myPage" />

    <item
        android:id="@+id/signOut"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/sign_out" />
</menu>

