<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ad.AdDetailFragment" >

    <ImageView
        android:id="@+id/imageViewAdDetail"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_of_ad" />

    <TextView
        android:id="@+id/adDetailTitle"
        android:layout_width="142dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewAdDetail"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAdDetail" />


    <TextView
        android:id="@+id/adDetailDescription"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tokenPrice"
        tools:layout_editor_absoluteX="65dp" />

    <TextView
        android:id="@+id/adDetailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/messageborder"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/contactSellerButton"
        app:layout_constraintTop_toBottomOf="@+id/buyBtn"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/contactSellerButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/contact_seller"
        app:layout_constraintEnd_toEndOf="@+id/adDetailDescription"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/adDetailDescription"
        app:layout_constraintTop_toBottomOf="@+id/adDetailDescription" />

    <TextView
        android:id="@+id/tokenPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/test"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewAdDetail"
        app:layout_constraintTop_toBottomOf="@+id/adDetailTitle" />

    <ImageView
        android:id="@+id/tokenImageInAdDetail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_token_24"
        app:layout_constraintEnd_toStartOf="@id/tokenPrice"
        app:layout_constraintBottom_toBottomOf="@id/tokenPrice"
        app:layout_constraintTop_toTopOf="@id/tokenPrice"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/token" />

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/buy"
        app:layout_constraintEnd_toEndOf="@+id/contactSellerButton"
        app:layout_constraintTop_toBottomOf="@+id/contactSellerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>