<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:contentDescription="@android:string/search_go"
        android:src="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
        app:layout_constraintStart_toEndOf="@+id/searchBar"
        app:layout_constraintTop_toTopOf="@+id/searchBar" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="306dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/searchLabel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/legoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lego"
        app:layout_constraintBottom_toBottomOf="@+id/dollsButton"
        app:layout_constraintEnd_toStartOf="@+id/dollsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/searchBar"
        app:layout_constraintTop_toTopOf="@+id/dollsButton" />

    <Button
        android:id="@+id/carsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        app:layout_constraintBottom_toBottomOf="@+id/dollsButton"
        app:layout_constraintEnd_toEndOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dollsButton"
        app:layout_constraintTop_toTopOf="@+id/dollsButton" />

    <Button
        android:id="@+id/dollsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/dolls"
        app:layout_constraintEnd_toStartOf="@+id/carsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/legoButton"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="userName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/carsButton"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/legoButton"
        app:layout_constraintTop_toBottomOf="@+id/dollsButton" />

    <Button
        android:id="@+id/saveUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save"
        app:layout_constraintEnd_toEndOf="@+id/userNameText"
        app:layout_constraintStart_toStartOf="@+id/userNameText"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

</androidx.constraintlayout.widget.ConstraintLayout>