<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myPageFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPageFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_ads_recycler"
        android:layout_width="411dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailUserPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/e_mail"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/nameUserPage"
        app:layout_constraintStart_toStartOf="@+id/nameUserPage"
        app:layout_constraintTop_toBottomOf="@+id/nameUserPage" />

    <TextView
        android:id="@+id/nameUserPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/first_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/profilePicCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePicCardView"
        app:layout_constraintTop_toTopOf="@+id/profilePicCardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePicCardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="75dp">

        <ImageView
            android:id="@+id/profilePicImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/changePicBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:text="@string/change_picture"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/profilePicCardView"
        app:layout_constraintStart_toStartOf="@+id/profilePicCardView"
        app:layout_constraintTop_toBottomOf="@id/profilePicCardView" />


</androidx.constraintlayout.widget.ConstraintLayout>